--- a/app/views/offers/index_xhr.html.slim
+++ b/app/views/offers/index_xhr.html.slim
@@ -1,2 +1,3 @@
-= render 'offers/index/search_results', offers: @local_offers,
+= render 'offers/index/search_results', local_offers: @local_offers,
+                                        national_offers: @national_offers,
                                         search_cache: @search_cache
