--- a/app/views/offers/index/_search_results.html.slim
+++ b/app/views/offers/index/_search_results.html.slim
@@ -1,15 +1,28 @@
 .Listing-results
-  h2.Listing-results__headline
-    == search_results_info_headline search_cache
-
   = link_to '#categories', class: 'jump-to-categories' do
     i.fa.fa-filter
     = I18n.t('offers.index.navigate_to_categories')
 
-  ul.search-results.Listing-results__list
-    - offers.each do |offer|
+
+  - if national_offers.any?
+    h2.Listing-results__headline
+      | Virtuelle Angebote
+      - if national_offers[1]
+        / If more than one national offer
+        =< link_to '(Mehr…)', '#'
+
+    ul.Listing-results__list
+      = render 'offers/index/single_search_result', offer: national_offers.first
+
+
+
+  h2.Listing-results__headline
+    == search_results_info_headline search_cache
+
+  ul.Listing-results__list
+    - local_offers.each do |offer|
       = render 'offers/index/single_search_result', offer: offer
-  = paginate offers
+  = paginate local_offers
 
 / prepare ajax spinner
 i.fa.fa-spin.fa-circle-o-notch.Ajax__spinner
