--- a/app/views/layouts/partials/_banner.html.slim
+++ b/app/views/layouts/partials/_banner.html.slim
@@ -5,4 +5,4 @@
 = modal_for 'beta_banner' do
   p
     = t 'shared.banner.beta_modal'
-    = link_to I18n.t('shared.banner.beta_modal_contact_link'), '/kontakt/new'
+    = link_to I18n.t('shared.banner.beta_modal_contact_link'), new_contact_path
