--- a/app/assets/stylesheets/rails_admin/custom/theming.css.scss
+++ b/app/assets/stylesheets/rails_admin/custom/theming.css.scss
@@ -5,3 +5,8 @@
 .badge-important {
   background-color: #d9534f;
 }
+
+// Make 'Abmelden' button visible again
+.label-important {
+  background-color: #d9534f;
+}
