--- a/app/assets/stylesheets/modules/_popup-content.scss
+++ b/app/assets/stylesheets/modules/_popup-content.scss
@@ -17,13 +17,18 @@
     margin-top: 0;
   }
 
-  button[class$="overlay_close"],[class$="beta_banner_close"] {
+  button[class$="overlay_close"],
+  [class$="beta_banner_close"] {
     position: absolute;
     top: -10px;
     right: -10px;
     width: 30px;
     height: 30px;
   }
+}
+
+#beta_banner {
+	display: none;
 }
 
 #unavailable_location_overlay {
