--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -11,6 +11,10 @@
   position: relative;
   margin: 0 auto;
   max-width: 1200px;
+
+	body[class^="template--pages-"] & {
+		margin-bottom: 30px;
+	}
 }
 
 
