Add new chapter for #207

--- a/app/views/pages/privacy.html.slim
+++ b/app/views/pages/privacy.html.slim
@@ -19,6 +19,9 @@ main.content-main.content-main--wide
             li
               h4.Privacy__title = t 'pages.privacy.chapter_two.nested_title_two'
               p = t 'pages.privacy.chapter_two.nested_text_two'
+            li
+              h4.Privacy__title = t 'pages.privacy.chapter_two.nested_title_three'
+              p = t 'pages.privacy.chapter_two.nested_text_three'
         li
           h3.Privacy__title = t 'pages.privacy.chapter_three.title'
           p = t 'pages.privacy.chapter_three.text'
