--- a/app/views/offers/index.html.slim
+++ b/app/views/offers/index.html.slim
@@ -1,7 +1,7 @@
 .wrapper-inner
   main.content-main
-    = render 'offers/index/search_results', local_offers: @local_offers,
-                                            national_offers: @national_offers,
+    = render 'offers/index/search_results', personal_offers: @personal_offers,
+                                            remote_offers: @remote_offers,
                                             search_cache: @search_cache
 
   - if @update_request
