--- a/app/views/offers/index/_search_results.html.slim
+++ b/app/views/offers/index/_search_results.html.slim
@@ -1,28 +1,32 @@
+= render 'offers/index/advanced_search', search_cache: search_cache
+
 .Listing-results
   = link_to '#categories', class: 'jump-to-categories' do
     i.fa.fa-filter
     = I18n.t('offers.index.navigate_to_categories')
 
+  - if search_cache.remote_focussed?
+    - main_offers = remote_offers
+  - else # if local focussed (default)
+    - main_offers = personal_offers
+    - if remote_offers.any?
+      h2.Listing-results__headline
+        | Telefon- und Onlineberatungen
+        - if remote_offers[1]
+          / If more than one national offer
+          =< link_to '(Mehr…)',
+                     offers_path(search_form: search_cache.remote_focus)
 
-  - if national_offers.any?
-    h2.Listing-results__headline
-      | Virtuelle Angebote
-      - if national_offers[1]
-        / If more than one national offer
-        =< link_to '(Mehr…)', '#'
-
-    ul.Listing-results__list
-      = render 'offers/index/single_search_result', offer: national_offers.first
-
-
+      ul.Listing-results__list
+        = render 'offers/index/single_search_result', offer: remote_offers.first
 
   h2.Listing-results__headline
     == search_results_info_headline search_cache
 
   ul.Listing-results__list
-    - local_offers.each do |offer|
+    - main_offers.each do |offer|
       = render 'offers/index/single_search_result', offer: offer
-  = paginate local_offers
+  = paginate main_offers
 
 / prepare ajax spinner
 i.fa.fa-spin.fa-circle-o-notch.Ajax__spinner
