--- a/app/views/offers/index_xhr.html.slim
+++ b/app/views/offers/index_xhr.html.slim
@@ -1,3 +1,3 @@
-= render 'offers/index/search_results', local_offers: @local_offers,
-                                        national_offers: @national_offers,
+= render 'offers/index/search_results', personal_offers: @personal_offers,
+                                        remote_offers: @remote_offers,
                                         search_cache: @search_cache
