--- a/app/assets/stylesheets/form/_filter-form.scss
+++ b/app/assets/stylesheets/form/_filter-form.scss
@@ -13,7 +13,7 @@
   position: relative;
   overflow: hidden;
   margin-bottom: 20px;
-  padding: 10px 10px 10px 0;
+  padding: 10px 20px 25px 10px;
   background: $brand_beige image-url('ico_filter.svg') no-repeat 20px 20px;
 
   &:before {
@@ -63,7 +63,6 @@
 
 .filter-form__fieldset {
   margin: 0;
-  padding: 0 10px;
   border: none;
 }
 
