Moved generic form layout classes to _base

--- a/app/assets/stylesheets/form/_base.scss
+++ b/app/assets/stylesheets/form/_base.scss
@@ -42,3 +42,13 @@ input[type="submit"] {
   background-color: $brand_brown;
   color: $brand_white;
 }
+
+.col-wrapper {
+  display: table;
+}
+
+.col-form-inner {
+  position: relative;
+  display: table-cell;
+  width: 25%;
+}
