--- a/app/assets/stylesheets/form/_filter-form.scss
+++ b/app/assets/stylesheets/form/_filter-form.scss
@@ -17,13 +17,13 @@
   background: $brand_beige image-url('ico_filter.svg') no-repeat 20px 20px;
 
   &:before {
+    position: absolute;
     bottom: 0;
+    left: 0;
     z-index: 20;
+    width: 75%;
     height: 30px;
     background: $brand_beige;
-    position: absolute;
-    left: 0;
-    width: 75%;
     content: ' ';
   }
 }
@@ -32,12 +32,12 @@
 
   &:after {
     position: absolute;
+    bottom: 30px;
     left: 0;
     width: 75%;
-    content: ' ';
-    bottom: 30px;
     height: 50px;
     background: linear-gradient(to bottom, rgba($brand_beige, 0) 0%, rgba($brand_beige, 1) 100%);
+    content: ' ';
 
   }
 }
@@ -45,14 +45,15 @@
 .filter-form__expander {
   @extend %roboto_bold;
   position: absolute;
+  bottom: 8px;
   z-index: 30;
   padding-top: 20px;
   width: 75%;
+  width: calc(75% - 13px);
   text-align: center;
   text-decoration: underline;
   font-size: 13px;
   cursor: pointer;
-  bottom: 8px;
 }
 
 .filter-form__headline {
@@ -76,16 +77,6 @@
   color: $brand_blue;
   font-weight: normal;
   font-size: 13px;
-}
-
-.col-wrapper {
-  display: table;
-}
-
-.col-form-inner {
-  position: relative;
-  display: table-cell;
-  width: 25%;
 }
 
 [type="submit"].filter-form__submit {
