--- a/app/views/offers/index/_advanced_search.html.slim
+++ b/app/views/offers/index/_advanced_search.html.slim
@@ -6,7 +6,7 @@
     = f.input :search_location, as: :hidden
     = f.input :generated_geolocation, as: :hidden
     = f.input :category, as: :hidden
-    .col-wrapper
+    .col-form-wrapper
       .col-form-inner
         fieldset.filter-form__fieldset
           legend.filter-form__fieldset__headline Kontaktaufnahme
