different positioning for ajax spinner

--- a/app/assets/stylesheets/modules/_ajax.scss
+++ b/app/assets/stylesheets/modules/_ajax.scss
@@ -13,7 +13,7 @@
 .Ajax .Ajax__spinner {
   display: inline-block !important;
   opacity: 0.8;
-  position: absolute;
+  position: fixed;
   left: 50%;
   top: 50%;
 }
