Minor wording changes

--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -38,4 +38,4 @@ footer.footer-main
           li.nav-legal__listitem
             = link_to 'Rechtliche Hinweise', '/rechtliche-hinweise'
           li.nav-legal__listitem
-            = link_to 'Datenschutzerklärung', '/datenschutzerklaerung'
+            = link_to 'Datenschutzhinweis', '/datenschutzerklaerung'
