--- a/app/views/offers/index.html.slim
+++ b/app/views/offers/index.html.slim
@@ -2,7 +2,8 @@
   main.content-main
     = render 'offers/index/search_results', personal_offers: @personal_offers,
                                             remote_offers: @remote_offers,
-                                            search_cache: @search_cache
+                                            search_cache: @search_cache,
+                                            search: @search
 
   - if @update_request
     = modal_for 'unavailable_location_overlay' do
