--- a/app/views/offers/index/_categories_nest.html.slim
+++ b/app/views/offers/index/_categories_nest.html.slim
@@ -2,6 +2,7 @@
   ul.Categories__list
     - set.each do |category, children|
       - name = category.name
+      - binding.pry
       - display_name = "#{name} (#{facets[name] || 0})"
       li.Categories__listitem class=category_list_classes(search_cache, name,
                                                           depth, children)
