unstyled rework of geolocation query, unclear if working with safari

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,7 @@
 @import "modules/flash-message";
 @import "modules/banner";
 @import "modules/ajax";
+@import "modules/js-geolocation";
 
 @import "modules/sections/section-content";
 @import "modules/sections/section-start";
