--- a/app/views/offers/shared/_search_form.html.slim
+++ b/app/views/offers/shared/_search_form.html.slim
@@ -11,14 +11,14 @@
   = f.input :search_location, label: t('shared.search.labels.loc'),
                               input_html: { \
                                 value: geoloc_to_s,
-                                class: 'input-xlg JS-Search-location-display',
+                                class: 'input-xlg JS-Geolocation__display',
                                 placeholder: t('shared.search.placeholder.loc'),
                                 oninvalid: custom_validity_js('fill_field'),
                                 onchange: custom_validity_reset_js,
                                 required: true }
   = f.input :generated_geolocation, as: :hidden,
                                     input_html: { \
-                                      class: 'JS-Search-location',
+                                      class: 'JS-Geolocation__input',
                                       value: default_geolocation }
   = f.input :category, as: :hidden
   button.main-search__submit = t 'shared.search.button'
