--- a/app/assets/stylesheets/form/_filter-form.scss
+++ b/app/assets/stylesheets/form/_filter-form.scss
@@ -14,7 +14,7 @@
   overflow: hidden;
   margin-bottom: 20px;
   padding: 10px 20px 25px 10px;
-  background: $brand_beige image-url('ico_filter.svg') no-repeat 20px 20px;
+  background-color: $brand_beige;
 
   &:before {
     position: absolute;
@@ -57,8 +57,8 @@
 }
 
 .filter-form__headline {
-  margin: 10px 10px 20px;
-  text-align: right;
+  margin: 0 0 15px 10px;
+  text-align: left;
   font-size: 20px;
 }
 
