Manual amend to last commit, add margin bottom to all categories link

--- a/app/assets/stylesheets/modules/_categories.scss
+++ b/app/assets/stylesheets/modules/_categories.scss
@@ -21,6 +21,7 @@
     @extend %clarat_rounding_start;
     @extend %clarat_rounding_end;
     display: inline-block;
+    margin-bottom: 20px;
     padding: 4px 10px;
     background: $brand_yellow;
     color: $brand_white;
