small fixes and todo comments

--- a/app/views/offers/index_xhr.html.slim
+++ b/app/views/offers/index_xhr.html.slim
@@ -1,3 +1,4 @@
 = render 'offers/index/search_results', personal_offers: @personal_offers,
                                         remote_offers: @remote_offers,
-                                        search_cache: @search_cache
+                                        search_cache: @search_cache,
+                                        search: @search
