--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -257,7 +257,6 @@
   }
 
   .Listing-results__organization {
-    display: block;
     padding-right: 0;
   }
 
@@ -276,6 +275,8 @@
   }
 
   .Listing-categories__item {
+    @extend %clearfix;
+
     a {
       margin: 0 4px 4px 0;
       padding: 0 8px;
@@ -304,10 +305,10 @@
     margin-bottom: 15px;
   }
 
-  .Listing-results__offer,
-  .Listing-results__offerinfo {
-    padding: 7px 10px;
-  }
+//  .Listing-results__offer,
+//  .Listing-results__offerinfo {
+//    padding: 7px 10px;
+//  }
 
   .template--pages-faq,
   .template--offers-show,
