--- a/app/assets/stylesheets/modules/_listing-results.scss
+++ b/app/assets/stylesheets/modules/_listing-results.scss
@@ -24,6 +24,9 @@
 .Listing-results__headline {
   @extend %roboto_regular;
   font-weight: 400;
+  margin: 0.5em 0;
+  font-size: 20px;
+
 }
 
 .Listing-results__emphasis {
