--- a/app/views/offers/show/_website_section.html.slim
+++ b/app/views/offers/show/_website_section.html.slim
@@ -1,4 +1,4 @@
-section.section-content
+section.section-content.section-content--internet-presence
   h3.section-content__title= t 'offers.show.internet_presence'
   .section-content__body
     - if offer.websites.count > 0
