Basic implementation of #248

--- a/app/views/offers/show/_opening_section.html.slim
+++ b/app/views/offers/show/_opening_section.html.slim
@@ -16,4 +16,4 @@ section.section-content.section-content--openinghours
 
     - if offer.opening_specification? && offer.openings.any?
       br
-    == offer.opening_specification
+    == offer.opening_specification_html
