--- a/app/assets/stylesheets/form/_filter-form.scss
+++ b/app/assets/stylesheets/form/_filter-form.scss
@@ -34,26 +34,29 @@
     position: absolute;
     bottom: 30px;
     left: 0;
-    width: 75%;
+    width: 100%;
     height: 50px;
     background: linear-gradient(to bottom, rgba($brand_beige, 0) 0%, rgba($brand_beige, 1) 100%);
     content: ' ';
+  }
 
+  .filter-form__submit {
+    display: none;
   }
 }
 
 .filter-form__expander {
   @extend %roboto_bold;
   position: absolute;
-  bottom: 8px;
+  bottom: 0;
   z-index: 30;
   padding-top: 20px;
-  width: 75%;
-  width: calc(75% - 13px);
+  width: 100%;
   text-align: center;
   text-decoration: underline;
   font-size: 13px;
   cursor: pointer;
+  padding-bottom: 8px;
 }
 
 .filter-form__headline {
