Refactor opening_specification

--- a/app/assets/stylesheets/modules/sections/_section-offer.scss
+++ b/app/assets/stylesheets/modules/sections/_section-offer.scss
@@ -28,11 +28,9 @@
     background: transparent;
   }
 
-  .section-content--openinghours {
-    ul {
-      margin: 0;
-      padding: 0;
-      list-style: none;
+  .section-content--openingspecification {
+    li {
+      margin-left: 20px;
     }
   }
 
